<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/one" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
    </group>

    <group android:id="@+id/two" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_locate_us"
            android:icon="@drawable/ic_location"
            android:title="@string/showrooms" />
    </group>

    <group android:id="@+id/three" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact_us" />
    </group>

    <group android:id="@+id/four" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_developer"
            android:icon="@drawable/developer_logo"
            android:title="@string/developer" />
    </group>


</menu>
