<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ten_percent_opacity_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="2dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/contactus_phone_showrooms"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/card_base_white">

            <TextView
                android:id="@+id/contactus_phone_showrooms_Manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/ShowRoom_owner_name"
                android:textColor="@color/lite_fb_blue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/contactus_phone_showrooms_proprater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/contactus_phone_showrooms_Manager"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/contactus_phone_showrooms_Manager"
                android:fontFamily="sans-serif"
                android:text="@string/Showroom_propeater"
                android:textColor="@color/black_gray"
                android:textSize="12sp"
                android:textStyle="normal" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/brother_contact_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/contactus_phone_showrooms_Manager"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/bro" />

            <TextView
                android:id="@+id/contactus_phone_showrooms_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contactus_phone_showrooms_Manager"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="15dp"
                android:text="@string/Contact1_phone_number"
                android:textColor="@color/black"
                android:textSize="18dp"

                android:textStyle="normal" />

            <ImageView
                android:id="@+id/contactus_phone_showrooms_phone_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/contactus_phone_showrooms_Manager"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="17dp"
                android:layout_toRightOf="@+id/contactus_phone_showrooms_tv"
                android:src="@drawable/ic_phone_black" />

            <ImageView
                android:id="@+id/contactus_phone_showrooms_SMS_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/contactus_phone_showrooms_Manager"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="17dp"
                android:layout_toRightOf="@+id/contactus_phone_showrooms_phone_icon"
                android:src="@drawable/ic_textsms_black" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/daddy_contact_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/brother_contact_icon"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/daddy" />


            <TextView
                android:id="@+id/contactus_phone_daddy_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contactus_phone_showrooms_tv"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="18dp"
                android:text="@string/Contact2_phone_number"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/contactus_phone_daddy_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/contactus_phone_showrooms_phone_icon"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_toRightOf="@+id/contactus_phone_showrooms_tv"
                android:src="@drawable/ic_phone_black" />

            <ImageView
                android:id="@+id/contactus_daddy_SMS_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/contactus_phone_showrooms_SMS_icon"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_toRightOf="@+id/contactus_phone_showrooms_phone_icon"
                android:src="@drawable/ic_textsms_black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/contactus_phone_showroom_1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/card_base_white">

            <TextView
                android:id="@+id/contactus_phone_showroom_1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/showroom1_name"
                android:textColor="@color/lite_fb_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contactus_phone_showroom_1_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/contactus_phone_showroom_1_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/contactus_phone_showroom_1_name"
                android:fontFamily="sans-serif"
                android:text="@string/Maripeda_showroom_manager_phone"
                android:textColor="@color/black_gray"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/contactus_phone_showroom_1_Manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contactus_phone_showroom_1_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/showroom_manger"
                android:textColor="@color/lite_fb_blue"
                android:textSize="18sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/nani_manager_contact_image"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_below="@+id/contactus_phone_showroom_1_Manager"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/krishna" />


            <TextView
                android:id="@+id/contactus_phone_showroom_1_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contactus_phone_showroom_1_Manager"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="3dp"
                android:text="@string/Contact3_phone_number"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/contactus_phone_showroom_1_phone_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/contactus_phone_showroom_1_Manager"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/contactus_phone_showroom_1_tv"
                android:src="@drawable/ic_phone_black" />

            <ImageView
                android:id="@+id/contactus_phone_showroom_1_SMS_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/contactus_phone_showroom_1_Manager"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/contactus_phone_showroom_1_phone_icon"
                android:src="@drawable/ic_textsms_black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/contactus_phone_showroom_2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/card_base_white">

            <TextView
                android:id="@+id/contactus_phone_showroom_2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/showroom2_name"
                android:textColor="@color/lite_fb_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contactus_phone_showroom_2_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/contactus_phone_showroom_2_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/contactus_phone_showroom_2_name"
                android:fontFamily="sans-serif"
                android:text="@string/Kesumudram_showroom_manager_phone"
                android:textColor="@color/black_gray"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/contactus_phone_showroom_2_Manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contactus_phone_showroom_2_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/showroom_manger"
                android:textColor="@color/lite_fb_blue"
                android:textSize="18sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/umasai_manager_contact_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/contactus_phone_showroom_2_Manager"
                android:layout_alignStart="@+id/contactus_phone_showroom_2_Manager"
                android:layout_alignTop="@+id/contactus_phone_showroom_2_tv"
                android:src="@drawable/mama" />

            <TextView
                android:id="@+id/contactus_phone_showroom_2_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contactus_phone_showroom_2_Manager"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="3dp"
                android:text="@string/Contact4_phone_number"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/contactus_phone_showroom_2_phone_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/contactus_phone_showroom_2_Manager"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/contactus_phone_showroom_2_tv"
                android:src="@drawable/ic_phone_black" />

            <ImageView
                android:id="@+id/contactus_phone_showroom_2_SMS_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/contactus_phone_showroom_2_Manager"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/contactus_phone_showroom_2_phone_icon"
                android:src="@drawable/ic_textsms_black" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/contactus_email_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/card_base_white">

            <TextView
                android:id="@+id/contact_us_nani_email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/email_title"
                android:textColor="@color/lite_fb_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Contact_us_email"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_below="@+id/contact_us_nani_email_tv"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/Nani_Email"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/contact_us_email_IV"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:layout_toRightOf="@+id/Contact_us_email"
                android:src="@drawable/ic_email_black" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>

